test/compile_errors/err_goto_in_defer.w
//! expect-check-fail: goto not allowed in defer

fn main:
    defer: goto 'done
    'done return
